--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,7 @@ button, input {
   color: var(--main-font-color);
   font-family: inherit;
   border: none;
+  font-size: 1.2rem;
 }
 
 input {
@@ -56,6 +57,6 @@ input {
   grid-column: 3/4;
 }
 
-#responseArea {
+#response {
   grid-column: 0/1;
 }
