--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,3 +60,9 @@ input {
 #response {
   grid-column: 0/1;
 }
+
+#baseCurrency>div:hover, #targetCurrency>div:hover {
+  font-size: 2rem;
+  color: black;
+}
+
